--- a/cosmet.css
+++ b/cosmet.css
@@ -1,8 +1,44 @@
+div {
+	margin: 0;
+	padding: 0;
+}
+
 .cosmet {
 	position: absolute;
 	width: 100%;
 	height: 100%;
 	top: 0;
 	left: 0;
-	background-color: #222;
+	background-color: #000010;
+	color: #e1e1e1;
+}
+
+.graph-container {
+	position: absolute;
+	height: 45%;
+	width: 100%;
+	top: 0;
+	border-bottom: 1px solid #444;
+}
+
+.graph {
+	position: absolute;
+	height: 100%;
+	width: 65%;
+	padding: 2em;
+	background: white;
+}
+
+.status {
+	width: 35%;
+	height: 100%;
+	position: absolute;
+	background: blue;
+}
+
+.details-container {
+	position: absolute;
+	height: 55%;
+	top: 45;
+	width: 100%;
 }
