--- a/cosmet.css
+++ b/cosmet.css
@@ -4,41 +4,41 @@ div {
 }
 
 .cosmet {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
 	background-color: #000010;
 	color: #e1e1e1;
+	height: 100%;
+	left: 0;
+	position: absolute;
+	top: 0;
+	width: 100%;
 }
 
 .graph-container {
-	position: absolute;
-	height: 45%;
-	width: 100%;
-	top: 0;
 	border-bottom: 1px solid #444;
+	height: 45%;
+	position: absolute;
+	top: 0;
+	width: 100%;
 }
 
 .graph {
-	position: absolute;
 	height: 100%;
+	position: absolute;
 	width: 65%;
-	padding: 2em;
-	background: white;
 }
 
 .status {
-	width: 35%;
 	height: 100%;
 	position: absolute;
-	background: blue;
+	right: 0;
+	width: 35%;
+	border-left: 1px solid #444;
 }
 
 .details-container {
-	position: absolute;
+	bottom: 0;
 	height: 55%;
+	position: absolute;
 	top: 45;
 	width: 100%;
 }
